--- a/wintrade/src/styles.css
+++ b/wintrade/src/styles.css
@@ -1,7 +1,65 @@
-* {
-    box-sizing: border-box;
+body {
+    background-color: rgb(127, 159, 255);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    background-image: url("../public/images/mountain.jpg");
+    background-size: cover;
 }
 
-body {
+.card-container {
     margin: 0;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    text-align: center;
+}
+
+.weather {
+    width: 380px;
+    padding: 30px;
+    margin: 50px auto;
+    border-radius: 10px;
+    background-color: #0530ad;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search button img {
+    width: 40px;
+    height: 40px;
+}
+
+.search button {
+    border-radius: 50%;
+    background-color: white;
+    cursor: pointer;
+}
+
+.search button:hover {
+    background-color: lightgray;
+}
+
+.details {
+    display: flex;
+    text-align: center;
+}
+
+.search input {
+    flex: 1;
+    margin-right: 10px ;
+    border: none;
+    outline: 0;
+    padding: 12px 25px;
+    font-size: 18px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.details img {
+    width: 70px;
+    height: 70px;
 }
