--- a/wintrade/src/styles.css
+++ b/wintrade/src/styles.css
@@ -65,6 +65,24 @@ body {
     height: 70px;
 }
 
+img {
+    width: 60px;
+    height: 60px;
+}
+
+.contact-info {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
 .info {
     margin-top: 25px;
+}
+
+.email-container {
+    display: flex;
+}
+
+.about-container {
+    margin: 10px;
 }
