--- a/wintrade/src/styles.css
+++ b/wintrade/src/styles.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
     color: white;
     text-align: center;
+    opacity: 0.9;
 }
 
 .weather {
@@ -107,3 +108,22 @@ img {
 .contact-container {
     display: flex;
 } 
+
+.day-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+}
+
+.card-image {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+}
+
+.forecast-card {
+    color:white;
+    background-color: #0530ad;
+    opacity: 0.9;
+    margin: 10px;
+}
